tests/NormalTests/paczka1/small_fuzzy/56622133.err
Error in line 2: cSJDONd A728 77,8
Error in line 6: 5DzBI40QFwc A728 72,1
Error in line 7: 5DzBI40QFwc S672 85,1
Error in line 4: ukRZe S672 25,4
